# managerlocal

./: .gitignore  .npmrc  README.md  ROADMAP.md  design-qa.md  index.html  package-lock.json  package.json
docs/: design-qa.md  generar-modulos.md  plugin-system.md  sidecars.md
scripts/: download-whisper-engine.ps1  download-whisper-model.ps1  generate-module.mjs  install-rembg.ps1  prepare-sidecars.ps1
src/: App.tsx  appearance.tsx  main.tsx  pixel-theme.css  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tools/: advanced_pdf_optimizer.rs  ai_background.rs  background.rs  batch_renamer.rs  binaries.rs  dependency_center.rs  document_converter.rs  file_actions.rs  image_compressor.rs  image_converter.rs  image_resizer.rs  local_ocr.rs  local_transcription.rs  media_downloader.rs  mod.rs  pdf_tools.rs  plugin_system.rs  qr.rs  resource_manager.rs  text_diff.rs  video_converter.rs
src/components/: OutputActions.tsx  ToolIcon.tsx  ToolPixelIcon.tsx  WindowControls.tsx
src/modules/: registry.ts  tool-routes.tsx
src/modules/advanced-pdf-optimizer/: AdvancedPdfOptimizer.tsx  advanced-pdf-optimizer.service.ts
src/modules/ai-background-remover/: AiBackgroundRemover.tsx  ai-background-remover.service.ts
src/modules/background-remover/: BackgroundRemover.tsx  background.service.ts
src/services/: file-actions.ts  output-history.ts  text-output.ts
src/types/: tool.ts
(+32 files in other folders)
